PEH-11891 Fixed - Page Header is not fully visible for all pages

--- a/force-app/main/community-template/aura/ppCustomThemeLayout/ppCustomThemeLayout.css
+++ b/force-app/main/community-template/aura/ppCustomThemeLayout/ppCustomThemeLayout.css
@@ -6,7 +6,7 @@
 }
 
 .THIS.PHONE .rr-body-content {
-    padding-top: 2rem;
+    padding-top: 4.5rem;
 }
 
 /* login screen background */
